samples/_failures_safe/1761712494_b39995_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01f6c260.c: In function ‘main’:
./samples/SAFE/__tmp_01f6c260.c:180:5: error: expected declaration or statement at end of input
  180 |     }
      |     ^
